basic styling and adding functionality

--- a/index.html
+++ b/index.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <style rel='stylesheet' type:"text/css" href="style.css"></style>
+        <link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Mono&display=swap" rel="stylesheet">
+        <link rel='stylesheet' type="text/css" href="style.css">
     </head>
     <body>
         <span id="timer">60</span>
         <span id="score">0</span>
-        <h3 id="question"></h3>
-        <ul id="answers"></ul>
-
-
+        <div id="wrapper">
+            <h3 id="question"></h3>
+            <div id="answers"></div>
+        </div>
+        
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
         <script src="script.js"></script>
