--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
         <link rel='stylesheet' type="text/css" href="style.css">
     </head>
     <body>
-        <span id="timer">60</span>
-        <span id="score">0</span>
-        <div id="wrapper">
+        <div id="wrapper" class="clearfix">
+            <div id='scoreBoard' class='clearfix'>
+                <div id="timer" class="clearfix"><p>60</p></div>
+                <div id="score" class="clearfix"><p>0</p></div>
+            </div>
             <h3 id="question"></h3>
             <div id="answers"></div>
         </div>
