created landing page, updated styles, fixed bugs

--- a/index.html
+++ b/index.html
@@ -7,15 +7,20 @@
     <body>
         <div id="wrapper" class="clearfix">
             <div id='scoreBoard' class='clearfix'>
-                <div id="timer" class="clearfix"><p>60</p></div>
-                <div id="score" class="clearfix"><p>0</p></div>
+                <div id="timerBox" class="clearfix"><p class='labels'>Time Left</p><p id="timer">60</p></div>
+                <div id="scoreBox" class="clearfix"><p class='labels'>Score</p><p id="score" >0</p></div>
             </div>
             <h3 id="question"></h3>
             <div id="answers"></div>
+            <div id="intro">
+                <h2>Coding Quiz</h2>
+                <h3>Test your knowledge with this code quiz!</h3>
+                <div id="startBtn">
+                    <p>Start Quiz!</p>
+                </div>
+            </div>
         </div>
-        
 
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
         <script src="script.js"></script>
     </body>
 </html>
