--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 </div>
             </div>
         </div>
-
+        <script src="questions.js"></script>
         <script src="script.js"></script>
     </body>
 </html>
