displaying whether the answer was correct

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Mono&display=swap" rel="stylesheet">
         <link rel='stylesheet' type="text/css" href="style.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
     <body>
         <div id="wrapper" class="clearfix">
@@ -13,8 +14,8 @@
             <h3 id="question"></h3>
             <div id="answers"></div>
             <div id="intro">
-                <h2>Coding Quiz</h2>
-                <h3>Test your knowledge with this code quiz!</h3>
+                <h1>Coding Quiz</h1>
+                <h2>Test your knowledge</h2>
                 <div id="startBtn">
                     <p>Start Quiz!</p>
                 </div>
