adding new features

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div id="intro">
                 <h1>Coding Quiz</h1>
                 <h2>Test your knowledge</h2>
-                <div id="startBtn">
+                <div id="startBtn" class="btn">
                     <p>Start Quiz!</p>
                 </div>
             </div>
